--- a/templates/flatpages/default.html
+++ b/templates/flatpages/default.html
@@ -14,7 +14,7 @@
         <!-- Responsive navbar-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
    <div class="container">
-       <a class="navbar-brand" href="#">Django flatpages</a>
+       <a class="navbar-brand" href="/news/">Новости</a>
        <button class="navbar-toggler" type="button" data-toggle="collapse"
                data-target="#navbarResponsive"
                aria-controls="navbarResponsive" aria-expanded="false"
@@ -24,12 +24,12 @@
        <div class="collapse navbar-collapse" id="navbarResponsive">
            <ul class="navbar-nav ml-auto">
                <li class="nav-item active">
-                   <a class="nav-link" href="#">Home
-                       <span class="sr-only">(current)</span>
+                   <a class="nav-link" href="/news/create">Создать
+                       <span class="sr-only"></span>
                    </a>
                </li>
                <li class="nav-item">
-                   <a class="nav-link" href="/about/">About</a>
+                   <a class="nav-link" href="/post_delete/">Удалить</a>
                </li>
                <li class="nav-item">
                    <a class="nav-link" href="/contacts/">Contact</a>
