--- a/templates/flatpages/default.html
+++ b/templates/flatpages/default.html
@@ -29,10 +29,13 @@
                    </a>
                </li>
                <li class="nav-item">
-                   <a class="nav-link" href="/post_delete/">Удалить</a>
+                   <a class="nav-link" href="sign/logout/">Выйти</a>
                </li>
                <li class="nav-item">
-                   <a class="nav-link" href="/contacts/">Contact</a>
+                   <a class="nav-link" href="/accounts/login/">Войти</a>
+               </li>
+               <li class="nav-item">
+                   <a class="nav-link" href="/accounts/signup/">Регистрация</a>
                </li>
            </ul>
        </div>
