--- a/templates/flatpages/default.html
+++ b/templates/flatpages/default.html
@@ -37,6 +37,9 @@
                <li class="nav-item">
                    <a class="nav-link" href="/accounts/signup/">Регистрация</a>
                </li>
+               <li class="nav-item">
+                   <a class="nav-link" href="/news/category/">Категории</a>
+               </li>
            </ul>
        </div>
    </div>
