--- a/templates/post.html
+++ b/templates/post.html
@@ -6,5 +6,6 @@ Post
 {% endblock title %}
 
 {% block content %}
-<h1>{{ post }}</h1>
+<h1>{{ post.title }}</h1>
+<h4>{{ post.body }}</h4>
 {% endblock content %}
