--- a/templates/flatpages/default.html
+++ b/templates/flatpages/default.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
+{%load static%}
 <html lang="en">
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Bare - Start Bootstrap Template</title>
+        <title>{% block title%}Новости{% endblock %}</title>
         {% load static %}
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
     </head>
     <body>
         <!-- Responsive navbar-->
+
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
    <div class="container">
        <a class="navbar-brand" href="/news/">Новости</a>
@@ -45,6 +47,9 @@
    </div>
 </nav>
         <!-- Page content-->
+        <div class="container text-center my-3">
+            <img width="400" src="{% static '/images/SkillFactory.png' %}" alt="SkillFactory" />
+        </div>
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
