--- a/templates/post.html
+++ b/templates/post.html
@@ -1,11 +1,13 @@
 {% extends 'flatpages/default.html' %}
 
+<head>
+    {% block title %}
+    {{post.title}}
+    {% endblock title %}
+</head>
 
-{% block title %}
-Post
-{% endblock title %}
 
 {% block content %}
 <h1>{{ post.title }}</h1>
-<h4>{{ post.body }}</h4>
+<p>{{ post.body }}</p>
 {% endblock content %}
