--- a/templates/flatpages/default.html
+++ b/templates/flatpages/default.html
@@ -10,13 +10,20 @@
         {% load static %}
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
+        <link rel="apple-touch-icon" sizes="180x180" href="{% static '/icon/apple-touch-icon.png' %}">
+        <link rel="icon" type="image/png" sizes="32x32" href="{% static '/icon/favicon-32x32.png' %}">
+        <link rel="icon" type="image/png" sizes="16x16" href="{% static '/icon/favicon-16x16.png' %}">
+        <link rel="manifest" href="{% static '/icon/site.webmanifest' %}">
     </head>
     <body>
         <!-- Responsive navbar-->
 
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
    <div class="container">
-       <a class="navbar-brand" href="/news/">Новости</a>
+
+       <a class="navbar-brand" href="/">
+           <img width="40" src="{% static '/images/logo.png' %}" alt="logo">
+       </a>
        <button class="navbar-toggler" type="button" data-toggle="collapse"
                data-target="#navbarResponsive"
                aria-controls="navbarResponsive" aria-expanded="false"
@@ -25,6 +32,11 @@
        </button>
        <div class="collapse navbar-collapse" id="navbarResponsive">
            <ul class="navbar-nav ml-auto">
+               <li class="nav-item active">
+                   <a class="nav-link" href="/news/">Новости
+                       <span class="sr-only"></span>
+                   </a>
+               </li>
                <li class="nav-item active">
                    <a class="nav-link" href="/news/create">Создать
                        <span class="sr-only"></span>
