--- a/templates/news.html
+++ b/templates/news.html
@@ -6,10 +6,10 @@
 {% endblock title %}
 
 
-
 {% block content %}
    <h1>Все новости</h1>
-   <form action="" method="get">
+   <form action="" method="get" style="text-align:right" title="Поиск">
+       <h6>Поиск новости</h6>
        {{ filterset.form.as_p }}
        <input type="submit" value="Искать" />
    </form>
